# car-parking

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
car_parking/: asgi.py  settings.py  urls.py  uwsgi.ini  wsgi.py
parking/: admin.py  apps.py  models.py
parking/api/: serializers.py  urls.py  views.py
parking/api/tests/: factories.py  test_views.py
parking/migrations/: 0001_initial.py
