[tool.poetry]
name = "car-parking"
version = "0.1.0"
description = "Car parking management system"

[tool.poetry.dependencies]
python = "^3.14"
django = "^5.2"
djangorestframework = "^3.15"
psycopg2-binary = "^2.9"
django-environ = "^0.12.0"
factory-boy = "^3.3"
uwsgi = "^2.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0"
ruff = "^0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["E501", "B008"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
